# glhf

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/skills/database/: SKILL.md
.claude/skills/rust-tests/: SKILL.md
.claude/skills/semantic-search/: SKILL.md
.claude/skills/setup-environment/: SKILL.md
.github/workflows/: ci.yml
benches/: indexing.rs
docs/: DESIGN.md  PLAN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_path.rs  fuzz_fts_escape.rs  fuzz_parse_jsonl.rs  fuzz_truncate.rs
scripts/: auto_label_queries.py  generate_queries.py  label_queries.py  sample_corpus.py  setup-models.sh  validate_eval_data.py
src/: commands.rs  config.rs  document.rs  embed.rs  error.rs  lib.rs  main.rs  rerank.rs  utils.rs
src/db/: mod.rs
src/eval/: dataset.rs  embedder.rs  metrics.rs  mod.rs
src/index/: bm25.rs  mod.rs
src/ingest/: conversation.rs  mod.rs
src/models/: document.rs  mod.rs
src/style/: components.rs  icons.rs  mod.rs  output.rs  theme.rs
tests/: eval_models.rs  integration.rs  property_tests.rs  search_quality.rs
tests/common/: corpus.rs  mod.rs
tests/eval_data/: corpus.json  corpus_expanded.json  queries.json  queries_expanded.json  query_candidates.json
