[package]
name = "glhf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.25"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "indexing"
harness = false
