[package]
name = "glhf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A CLI tool for searching Claude Code conversation history"
license = "MIT"
repository = "https://github.com/TrevorS/glhf"
keywords = ["cli", "search", "claude"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.15"
dirs = "6"
hex = "0.4.3"
indicatif = "0.17"
model2vec-rs = "0.1"
owo-colors = "4"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
sqlite-vec = "0.1"
textwrap = "0.16"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3"

[[bin]]
name = "bench_models"
path = "src/bin/bench_models.rs"

[[bench]]
name = "indexing"
harness = false

[lints.rust]
# Allow unsafe for sqlite-vec FFI integration (sqlite3_auto_extension)
unsafe_code = "warn"

[lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Style improvements
style = { level = "warn", priority = -1 }

# Complexity
complexity = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Pedantic (selective)
pedantic = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"

# Additional useful lints
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
